# fluidsynth-lite

./: CMakeLists.txt
.github/workflows/: build.yml
cmake_admin/: report.cmake
include/: CMakeLists.txt
include/fluidsynth/: CMakeLists.txt  synth.h
src/: CMakeLists.txt  config.cmake  config.meson.in  config_win32.cmake  config_win32.h.in
src/midi/: fluid_midi.c
src/rvoice/: fluid_chorus.c
src/sfloader/: fluid_defsfont.c
src/synth/: fluid_synth.c
src/utils/: fluid_hash.c  fluid_settings.c  fluid_sys.c  fluidsynth_priv.h
